[package]
name = "bevy-SIR"
version = "0.1.0"
authors = ["Rose Peck <olaf223224@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.4"
bevy_prototype_lyon = { git ="https://github.com/Nilirad/bevy_prototype_lyon/" }
rand = "0.8.0"